force-app/main/default/objects/AssetLiability__c/fields/AccNumbers_Associated_with_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>AccNumbers_Associated_with_Mortgage__c</fullName>
    <label>Acc. Numbers Associated with Mortgage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>