force-app/main/default/objects/AssetLiability__c/fields/Address_for_Memorial_Responsibles_L_3__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Memorial_Responsibles_L_3__c</fullName>
    <label>Address for Memorial Responsibles L-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>