force-app/main/default/objects/AssetLiability__c/fields/Address_of_Vehicle_Auctioneer_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Vehicle_Auctioneer_Line_3__c</fullName>
    <label>Address of Vehicle Auctioneer Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>