force-app/main/default/objects/AssetLiability__c/fields/Amount_Due_For_Funeral__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_For_Funeral__c</fullName>
    <label>Amount Due For Funeral</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>