force-app/main/default/objects/AssetLiability__c/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <label>Amount Payable</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>