force-app/main/default/objects/AssetLiability__c/fields/Arrears_for_Rent__c.field-meta.xml
<CustomField>
    <fullName>Arrears_for_Rent__c</fullName>
    <label>Arrears for Rent?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>