force-app/main/default/objects/AssetLiability__c/fields/Asset_Description__c.field-meta.xml
<CustomField>
    <fullName>Asset_Description__c</fullName>
    <label>Asset Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>