force-app/main/default/objects/AssetLiability__c/fields/Auctioneer_Clearance_Agents_Address_L_1__c.field-meta.xml
<CustomField>
    <fullName>Auctioneer_Clearance_Agents_Address_L_1__c</fullName>
    <label>Auctioneer/Clearance Agents Address L1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>