force-app/main/default/objects/AssetLiability__c/fields/Auctioneer_Clearance_Agents_Reference__c.field-meta.xml
<CustomField>
    <fullName>Auctioneer_Clearance_Agents_Reference__c</fullName>
    <label>Auctioneer/Clearance Agents Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>