force-app/main/default/objects/AssetLiability__c/fields/Bank_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address_Line_2__c</fullName>
    <label>Bank Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>