force-app/main/default/objects/AssetLiability__c/fields/Bank_Address_Paying_for_Funeral_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address_Paying_for_Funeral_Line_3__c</fullName>
    <label>Bank Address Paying for Funeral Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>