force-app/main/default/objects/AssetLiability__c/fields/Bank_Spreadsheet_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Spreadsheet_Number__c</fullName>
    <label>Bank Spreadsheet Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>