force-app/main/default/objects/AssetLiability__c/fields/Bank_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Bank_Telephone__c</fullName>
    <label>Bank Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>