force-app/main/default/objects/AssetLiability__c/fields/Books_Certs_to_NSB__c.field-meta.xml
<CustomField>
    <fullName>Books_Certs_to_NSB__c</fullName>
    <label>Books/Certs to NSB?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>