force-app/main/default/objects/AssetLiability__c/fields/Cash_From__c.field-meta.xml
<CustomField>
    <fullName>Cash_From__c</fullName>
    <label>Cash From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>