force-app/main/default/objects/AssetLiability__c/fields/Cash_Holder__c.field-meta.xml
<CustomField>
    <fullName>Cash_Holder__c</fullName>
    <label>Cash Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>