force-app/main/default/objects/AssetLiability__c/fields/Cash_Holder_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Cash_Holder_Address_Line_2__c</fullName>
    <label>Cash Holder Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>