force-app/main/default/objects/AssetLiability__c/fields/Certificates_Sold__c.field-meta.xml
<CustomField>
    <fullName>Certificates_Sold__c</fullName>
    <label>Certificates Sold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>