force-app/main/default/objects/AssetLiability__c/fields/Cost_of_Memorial__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Memorial__c</fullName>
    <label>Cost of Memorial</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>