force-app/main/default/objects/AssetLiability__c/fields/Creditor_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Address_Line_2__c</fullName>
    <label>Creditor Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>