force-app/main/default/objects/AssetLiability__c/fields/Creditor_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Address_Line_3__c</fullName>
    <label>Creditor Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>