force-app/main/default/objects/AssetLiability__c/fields/Date_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Date_Inserted__c</fullName>
    <label>Date Inserted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>