force-app/main/default/objects/AssetLiability__c/fields/Date_Valuation_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Valuation_Received__c</fullName>
    <label>Date Valuation Received</label>
    <type>Date</type>
</CustomField>