force-app/main/default/objects/AssetLiability__c/fields/Deed_Holder_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Deed_Holder_Address_Line_4__c</fullName>
    <label>Deed Holder Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>