force-app/main/default/objects/AssetLiability__c/fields/Deed_Holder_Reference__c.field-meta.xml
<CustomField>
    <fullName>Deed_Holder_Reference__c</fullName>
    <label>Deed Holder Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>