force-app/main/default/objects/AssetLiability__c/fields/Details_of_F_E__c.field-meta.xml
<CustomField>
    <fullName>Details_of_F_E__c</fullName>
    <label>Details of F/E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>