force-app/main/default/objects/AssetLiability__c/fields/Electronic_Referral__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Referral?</label>
    <type>Checkbox</type>
</CustomField>