force-app/main/default/objects/AssetLiability__c/fields/Employer_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_Line_1__c</fullName>
    <label>Employer Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>