force-app/main/default/objects/AssetLiability__c/fields/Employer_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address_Line_2__c</fullName>
    <label>Employer Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>