force-app/main/default/objects/AssetLiability__c/fields/Employer_of_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Employer_of_Deceased__c</fullName>
    <label>Employer of Deceased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>