force-app/main/default/objects/AssetLiability__c/fields/Employer_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Employer_Postcode__c</fullName>
    <label>Employer Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>