force-app/main/default/objects/AssetLiability__c/fields/Employer_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Employer_Telephone__c</fullName>
    <label>Employer Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>