force-app/main/default/objects/AssetLiability__c/fields/Estate_Agent_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent_Address_Line_2__c</fullName>
    <label>Estate Agent Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>