force-app/main/default/objects/AssetLiability__c/fields/Estate_Agent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent_Company_Name__c</fullName>
    <label>Estate Agent - Company Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>