force-app/main/default/objects/AssetLiability__c/fields/Estate_Agent_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent_Postcode__c</fullName>
    <label>Estate Agent Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>