force-app/main/default/objects/AssetLiability__c/fields/Estate_Agent_Reference__c.field-meta.xml
<CustomField>
    <fullName>Estate_Agent_Reference__c</fullName>
    <label>Estate Agent Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>