force-app/main/default/objects/AssetLiability__c/fields/Fee_Earner__c.field-meta.xml
<CustomField>
    <fullName>Fee_Earner__c</fullName>
    <label>Fee Earner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>