force-app/main/default/objects/AssetLiability__c/fields/Firm_Holding_the_Deed__c.field-meta.xml
<CustomField>
    <fullName>Firm_Holding_the_Deed__c</fullName>
    <label>Firm Holding the Deed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>