force-app/main/default/objects/AssetLiability__c/fields/Fund_PEP_Manager_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Fund_PEP_Manager_Address_Line_1__c</fullName>
    <label>Fund/PEP Manager Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>