force-app/main/default/objects/AssetLiability__c/fields/Fund_PEP_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Fund_PEP_Manager_Name__c</fullName>
    <label>Fund/PEP Manager Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>