force-app/main/default/objects/AssetLiability__c/fields/Funeral_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Paid_By__c</fullName>
    <label>Funeral Paid By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>