force-app/main/default/objects/AssetLiability__c/fields/Group_Code__c.field-meta.xml
<CustomField>
    <fullName>Group_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Group Code</label>
    <type>Checkbox</type>
</CustomField>