force-app/main/default/objects/AssetLiability__c/fields/Home_Help_Bill_Received__c.field-meta.xml
<CustomField>
    <fullName>Home_Help_Bill_Received__c</fullName>
    <label>Home Help Bill Received</label>
    <type>Date</type>
</CustomField>