force-app/main/default/objects/AssetLiability__c/fields/Home_Help_Paid__c.field-meta.xml
<CustomField>
    <fullName>Home_Help_Paid__c</fullName>
    <label>Home Help Paid</label>
    <type>Date</type>
</CustomField>