force-app/main/default/objects/AssetLiability__c/fields/Insurance_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Reference_Number__c</fullName>
    <label>Insurance Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>