force-app/main/default/objects/AssetLiability__c/fields/Insurer_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Address_Line_1__c</fullName>
    <label>Insurer Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>