force-app/main/default/objects/AssetLiability__c/fields/Insurer_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Fax_Number__c</fullName>
    <label>Insurer Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>