force-app/main/default/objects/AssetLiability__c/fields/Jewellery_Holder__c.field-meta.xml
<CustomField>
    <fullName>Jewellery_Holder__c</fullName>
    <label>Jewellery Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>