force-app/main/default/objects/AssetLiability__c/fields/Landlord_Agent_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Address_Line_4__c</fullName>
    <label>Landlord/Agent Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>