force-app/main/default/objects/AssetLiability__c/fields/Landlord_Agent_of_Lease__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_of_Lease__c</fullName>
    <label>Landlord/Agent of Lease</label>
    <length>255</length>
    <type>Text</type>
</CustomField>