force-app/main/default/objects/AssetLiability__c/fields/Landlord_Agent_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Telephone_Number__c</fullName>
    <label>Landlord/Agent Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>