force-app/main/default/objects/AssetLiability__c/fields/Lease_Reference__c.field-meta.xml
<CustomField>
    <fullName>Lease_Reference__c</fullName>
    <label>Lease Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>