force-app/main/default/objects/AssetLiability__c/fields/Local_Authority_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Address_Line_2__c</fullName>
    <label>Local Authority Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>