force-app/main/default/objects/AssetLiability__c/fields/Local_Authority_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Email_Address__c</fullName>
    <label>Local Authority Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>