force-app/main/default/objects/AssetLiability__c/fields/Local_Office_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Local_Office_Address_Line_4__c</fullName>
    <label>Local Office Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>