force-app/main/default/objects/AssetLiability__c/fields/Local_Office_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Local_Office_Telephone__c</fullName>
    <label>Local Office Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>