force-app/main/default/objects/AssetLiability__c/fields/Make_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Make_of_Vehicle__c</fullName>
    <label>Make of Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>