force-app/main/default/objects/AssetLiability__c/fields/Model_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Model_of_Vehicle__c</fullName>
    <label>Model of Vehicle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>