force-app/main/default/objects/AssetLiability__c/fields/Mortgagee__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee__c</fullName>
    <label>Mortgagee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>