force-app/main/default/objects/AssetLiability__c/fields/Mortgagee_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee_Address_Line_1__c</fullName>
    <label>Mortgagee Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>