force-app/main/default/objects/AssetLiability__c/fields/Mortgagee_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee_Address_Line_2__c</fullName>
    <label>Mortgagee Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>