force-app/main/default/objects/AssetLiability__c/fields/Mortgagee_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee_Address_Line_3__c</fullName>
    <label>Mortgagee Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>