force-app/main/default/objects/AssetLiability__c/fields/Mortgagee_Fax__c.field-meta.xml
<CustomField>
    <fullName>Mortgagee_Fax__c</fullName>
    <label>Mortgagee Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>