force-app/main/default/objects/AssetLiability__c/fields/National_Savings_Reference__c.field-meta.xml
<CustomField>
    <fullName>National_Savings_Reference__c</fullName>
    <label>National Savings Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>