force-app/main/default/objects/AssetLiability__c/fields/Notes_RE_State_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Notes_RE_State_Benefit__c</fullName>
    <label>Notes RE State Benefit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>