force-app/main/default/objects/AssetLiability__c/fields/NSC_Holder_Number__c.field-meta.xml
<CustomField>
    <fullName>NSC_Holder_Number__c</fullName>
    <label>NSC Holder Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>