force-app/main/default/objects/AssetLiability__c/fields/Number_of_Unit_Trusts_PEPs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Unit_Trusts_PEPs__c</fullName>
    <label>Number of Unit Trusts/PEPs</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>