force-app/main/default/objects/AssetLiability__c/fields/Nursing_Home_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Home_Email_Address__c</fullName>
    <label>Nursing Home Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>