force-app/main/default/objects/AssetLiability__c/fields/Nursing_Home_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Home_Postcode__c</fullName>
    <label>Nursing Home Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>