force-app/main/default/objects/AssetLiability__c/fields/Other_Assets_Holder_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Assets_Holder_Address_Line_3__c</fullName>
    <label>Other Assets Holder Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>