force-app/main/default/objects/AssetLiability__c/fields/Other_Assets_Holder_E_mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Other_Assets_Holder_E_mail_Address__c</fullName>
    <label>Other Assets Holder E-mail Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>