force-app/main/default/objects/AssetLiability__c/fields/Other_Bonds_Sold__c.field-meta.xml
<CustomField>
    <fullName>Other_Bonds_Sold__c</fullName>
    <label>Other Bonds Sold?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>