force-app/main/default/objects/AssetLiability__c/fields/Other_Party__c.field-meta.xml
<CustomField>
    <fullName>Other_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Party</label>
    <type>Checkbox</type>
</CustomField>