force-app/main/default/objects/AssetLiability__c/fields/Pension_Number_of_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Pension_Number_of_Deceased__c</fullName>
    <label>Pension Number of Deceased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>