force-app/main/default/objects/AssetLiability__c/fields/Pension_Provider__c.field-meta.xml
<CustomField>
    <fullName>Pension_Provider__c</fullName>
    <label>Pension Provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>