force-app/main/default/objects/AssetLiability__c/fields/Pension_Provider_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Pension_Provider_Address_Line_2__c</fullName>
    <label>Pension Provider Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>