force-app/main/default/objects/AssetLiability__c/fields/Pension_Provider_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Pension_Provider_Postcode__c</fullName>
    <label>Pension Provider Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>