force-app/main/default/objects/AssetLiability__c/fields/Pension_Reference__c.field-meta.xml
<CustomField>
    <fullName>Pension_Reference__c</fullName>
    <label>Pension Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>