force-app/main/default/objects/AssetLiability__c/fields/Postcode_of_Responsibles_for_Memorial__c.field-meta.xml
<CustomField>
    <fullName>Postcode_of_Responsibles_for_Memorial__c</fullName>
    <label>Postcode of Responsibles for Memorial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>