force-app/main/default/objects/AssetLiability__c/fields/Premium_Bonds__c.field-meta.xml
<CustomField>
    <fullName>Premium_Bonds__c</fullName>
    <label>Premium Bonds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>